Add gem installation instructions to README

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,10 @@
 Library for generating KML(Keyhole Markup Language) files in Ruby.
 Sweet if you want to place markers, overlays, and other awesome things over a google map or google earth.
 
+h2. Install
+
+<pre><code>gem install xaviershay-ruby_kml --source http://gems.github.com</code></pre>
+
 h2. Examples
 
 See @test/kml_file_test.rb@ for more examples
@@ -9,8 +13,7 @@ h3. Placing markers on a map
 
 "View on Google Maps":http://maps.google.com/maps?q=http://github.com/xaviershay/ruby_kml/tree/master%2Fexamples%2Fmelbourne-stations.kml?raw=true&t=k
 
-<pre><code>$LOAD_PATH.unshift('path/to/ruby_kml/lib') # Needed until this gets gemmified
-require 'kml'
+<pre><code>require 'kml'
 
 kml = KMLFile.new
 folder = KML::Folder.new(:name => 'Melbourne Stations')
